RESOLVED FIXED138309
[EFL] Fix the build if LOG_DISABLED=0 in release mode
https://bugs.webkit.org/show_bug.cgi?id=138309
Summary [EFL] Fix the build if LOG_DISABLED=0 in release mode
Tibor Mészáros
Reported 2014-11-03 06:14:12 PST
Enabling logging in release mode can be enough to debug an issue. But now the build is broken with the following error: ../../Source/WebCore/platform/efl/LoggingEfl.cpp: In function 'WTF::String WebCore::logLevelString()': ../../Source/WebCore/platform/efl/LoggingEfl.cpp:40:141: error: 'EINA_LOG_WARN' was not declared in this scope
Attachments
Patch (898 bytes, patch)
2014-11-03 06:19 PST, Tibor Mészáros
no flags
Tibor Mészáros
Comment 1 2014-11-03 06:19:52 PST
Created attachment 240846 [details] Patch This patch will fix the build error.
Chris Dumez
Comment 2 2014-11-03 09:24:31 PST
Comment on attachment 240846 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-11-03 10:01:01 PST
Comment on attachment 240846 [details] Patch Clearing flags on attachment: 240846 Committed r175472: <http://trac.webkit.org/changeset/175472>
WebKit Commit Bot
Comment 4 2014-11-03 10:01:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.