[EFL] Fix the build if LOG_DISABLED=0 in release mode https://bugs.webkit.org/show_bug.cgi?id=138309

Patch by Tibor Meszaros <tmeszaros.u-szeged@partner.samsung.com> on 2014-11-03
Reviewed by Chris Dumez.

* platform/efl/LoggingEfl.cpp:

Canonical link: https://commits.webkit.org/156143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175472 268f45cc-cd09-0410-ab3c-d52691b4dbfc